# realmz

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.mac_md/README.md/: .__mac_attr__
.mac_md/base/Optional/Divine Development X-tras/: .__mac_attr__
.mac_md/base/Optional/Race N' Caste Pack/: .__mac_attr__
.mac_md/base/Realmz/: .__mac_attr__
.mac_md/base/Realmz/Realmz Manual/: .__mac_attr__
.mac_md/proj/: .__mac_attr__
.mac_md/proj/mac/.gitignore/: .__mac_attr__
.mac_md/proj/mac/Realmz Classic/: .__mac_attr__
.mac_md/proj/osx/: .__mac_attr__
.mac_md/proj/osx/Realmz Carbon/: .__mac_attr__
.mac_md/resources/: .__mac_attr__
.mac_md/resources/Black Chancery Bold.ttf/: .__mac_attr__
.mac_md/resources/Black Chancery.ttf/: .__mac_attr__
.mac_md/resources/BlackChancery (Realmz).fog/: .__mac_attr__
.mac_md/resources/BlackChancery.fog/: .__mac_attr__
.mac_md/resources/BlackChancery.ttf/: .__mac_attr__
.mac_md/resources/Divine Right.rsrc/: .__mac_attr__
.mac_md/resources/realmz.rsrc/: .__mac_attr__
.mac_md/scripts/build-realmz.applescript/: .__mac_attr__
.mac_md/scripts/mac-repository-setup.command/: .__mac_attr__
.mac_md/src/: .__mac_attr__
.mac_md/src/RealmzCocoa.h/: .__mac_attr__
.mac_md/src/ResourceManager.cpp/: .__mac_attr__
.mac_md/src/hacks/carbon_hacks.c/: .__mac_attr__
.mac_md/src/realmz_orig/: .__mac_attr__
.mac_md/src/realmz_orig/ColorGamma.h/: .__mac_attr__
.mac_md/src/realmz_orig/GWorldInit.c/: .__mac_attr__
.mac_md/src/realmz_orig/GetVersStr.c/: .__mac_attr__
.mac_md/src/realmz_orig/Macrocosm Main.c/: .__mac_attr__
.mac_md/src/realmz_orig/RealmzCocoa.m/: .__mac_attr__
.mac_md/src/realmz_orig/action picker.c/: .__mac_attr__
.mac_md/src/realmz_orig/age.c/: .__mac_attr__
.mac_md/src/realmz_orig/attack.c/: .__mac_attr__
.mac_md/src/realmz_orig/beast.c/: .__mac_attr__
.mac_md/src/realmz_orig/bodycount.c/: .__mac_attr__
.mac_md/src/realmz_orig/buildmonster.c/: .__mac_attr__
.mac_md/src/realmz_orig/buttonchoice.c/: .__mac_attr__
.mac_md/src/realmz_orig/cast.c/: .__mac_attr__
.mac_md/src/realmz_orig/centerfield.c/: .__mac_attr__
.mac_md/src/realmz_orig/centerpict.c/: .__mac_attr__
.mac_md/src/realmz_orig/centerstage.c/: .__mac_attr__
.mac_md/src/realmz_orig/change.c/: .__mac_attr__
.mac_md/src/realmz_orig/checkforenemy.c/: .__mac_attr__
.mac_md/src/realmz_orig/checkforsecret.c/: .__mac_attr__
.mac_md/src/realmz_orig/choice.c/: .__mac_attr__
.mac_md/src/realmz_orig/class.c/: .__mac_attr__
.mac_md/src/realmz_orig/combaterrors.c/: .__mac_attr__
.mac_md/src/realmz_orig/combatinfo - combat choice.c/: .__mac_attr__
.mac_md/src/realmz_orig/combatmap.c/: .__mac_attr__
.mac_md/src/realmz_orig/combatsetup.c/: .__mac_attr__
.mac_md/src/realmz_orig/combatupdate-2.c/: .__mac_attr__
.mac_md/src/realmz_orig/compactitems.c/: .__mac_attr__
.mac_md/src/realmz_orig/contactinfo.c/: .__mac_attr__
.mac_md/src/realmz_orig/convert.h/: .__mac_attr__
.mac_md/src/realmz_orig/destroymonster.c/: .__mac_attr__
.mac_md/src/realmz_orig/drawbody.c/: .__mac_attr__
.mac_md/src/realmz_orig/editspellnames.c/: .__mac_attr__
.mac_md/src/realmz_orig/editstring.c/: .__mac_attr__
.mac_md/src/realmz_orig/fade.h/: .__mac_attr__
.mac_md/src/realmz_orig/fastplot.c/: .__mac_attr__
.mac_md/src/realmz_orig/fileprep.c/: .__mac_attr__
.mac_md/src/realmz_orig/flash - load & save door.c/: .__mac_attr__
.mac_md/src/realmz_orig/gammafade.c/: .__mac_attr__
.mac_md/src/realmz_orig/gammafade.h/: .__mac_attr__
.mac_md/src/realmz_orig/getchoice.c/: .__mac_attr__
.mac_md/src/realmz_orig/getscroll.c/: .__mac_attr__
base/Optional/: Divine Development X-tras  Divine Development X-tras.rsrc  Race N' Caste Pack.rsrc
base/Realmz/: .gitignore  Realmz Manual.rsrc
base/Realmz/Character Files/: Data CD  Kevlar  Lothlorian  Silver Leaf  Traskelion  Trevor  Vormale
base/Realmz/Data Files/: Custom Names.rsrc  Data P BD  Data SUB BD  Portraits.rsrc  Scenario Names.rsrc  Tacticals.rsrc
base/Realmz/Realmz Music/: Where to find more music files
base/Realmz/Save/: Game Descriptions
bundle/: AppIcon.icns  Info.plist.in
misc/: goldberg_config.rb
proj/mac/: .gitignore  Realmz Classic
proj/osx/Realmz Carbon/: .gitignore  Info.plist  Realmz CarbonTarget.xcconfig
resources/: Black Chancery Bold.ttf.rsrc  BlackChancery (Realmz).fog  BlackChancery.fog  BlackChancery.ttc  BlackChanceryBold.fog  Divine Right.rsrc  Theldrow.fog  realmz.rsrc
scripts/: build-realmz-carbon.sh  build-realmz-classic.applescript  build-realmz-mac.sh  deploy-realmz-mac.sh  mac-metadata-post-merge.sh  mac-metadata-pre-commit.sh  mac-repository-setup.command  save_mac_metadata.py
src/: EventManager.cpp  EventManager.h  FileManager.cpp  FileManager.h  FileManager.hpp  Font.cpp  Font.hpp  GraphicsCanvas.cpp  GraphicsCanvas.hpp  MemoryManager.cpp  MemoryManager.h  MemoryManager.hpp  MenuController.h  MenuManager-C-Interface.h  MenuManager.cpp  MenuManager.hpp  QuickDraw.cpp  QuickDraw.h  QuickDraw.hpp  RealmzCocoa.c  RealmzCocoa.h  ResourceManager.cpp  ResourceManager.h  ResourceTypes.h  SDLHelpers.cpp  SDLHelpers.hpp  SoundManager.cpp  SoundManager.h  StringConvert.hpp  Types.h  Types.hpp  WindowManager.cpp  WindowManager.h  WindowManager.hpp
src/macos/: MenuController.h  MenuController.mm
src/realmz_orig/: .gitignore  ColorGamma.h  Display.c  DrawString.c  GWorldInit.c  GetVersStr.c  MacrocosmMain.c  MyrRealmz.c  actionpicker.c  age.c  attack.c  beast.c  bodycount.c  bodyfield.c  bodyground.c  booty.c  buildmonster.c  buttonchoice.c  cansee.c  cast.c  castspell.c  centerfield.c  centerpict.c  centerstage.c  change.c  checkforenemy.c  checkforsecret.c  checkfortype.c  checkkeypad.c  checkmoneypool.c  checkrange-checkforitem.c  choice.c  class.c  collide.c  combat.c  combaterrors.c  combatinfo-combatchoice.c  combatmap.c  combatsetup.c  combatupdate-2.c  (+126 more)
src/tests/: GraphicsTest.cpp
src/windows/: MenuController.cpp  MenuController.h  WinMenuController.cpp  WinMenuController.hpp
(+364 files in other folders)
